# StructStudio-C

./: .gitignore  CMakeLists.txt  README.md  StructStudio C-1.0.0-win64.exe.sha256  StructStudio C-1.0.0-win64.zip.sha256
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
_CPack_Packages/win64/NSIS/StructStudio C-1.0.0-win64/: README.md
_CPack_Packages/win64/NSIS/StructStudio C-1.0.0-win64/docs/: 04_data_model.md  06_operations.md  12_roadmap.md  15_portability_notes.md  17_analysis_features.md  20_theory_context.md  21_examples_and_workspace.md  24_run_pipeline.md  29_installer_study_guide.md
_CPack_Packages/win64/ZIP/StructStudio C-1.0.0-win64/: README.md
_CPack_Packages/win64/ZIP/StructStudio C-1.0.0-win64/docs/: 00_overview.md  02_ui_ux.md  03_architecture.md  08_rendering.md  09_editor_logic.md  11_build_system.md  13_implementation_guide.md  14_c_basics_and_best_practices.md  16_usability_improvements.md  19_guided_playback.md  22_animation_system.md  23_windows_dpi_and_visual_sharpness.md  27_installer_packaging.md
docs/: 01_product_spec.md  05_structure_definitions.md  07_file_format.md  10_persistence.md  18_visual_assets_and_icon_sources.md  25_system_capabilities_guide.md  26_technical_debt_audit.md  28_code_study_guide.md
include/app/: windows_bootstrap.h
include/common/: error.h  util.h
include/core/: api.h  model.h
include/editor/: editor.h
include/persistence/: document_io.h
include/render/: render.h
include/ui/: main_window.h  system_dialogs.h  windows_resources.h
samples/: sample_graph.json
scripts/: build_installer.cmd  build_installer.ps1  run_structstudio.cmd  run_structstudio.ps1
src/app/: app.manifest  main.c  windows_bootstrap.c  windows_resources.rc
src/common/: error.c  util.c
src/core/: api_analysis.c  api_analysis_graph_advanced.c  api_analysis_playback.c  api_base.c  api_examples.c  api_internal.h  api_layout.c  api_mutation.c  api_primary.c  api_secondary.c  api_tertiary.c  api_theory.c  api_transform.c  api_tree.c  api_validation.c  model.c
src/editor/: animation.c  editor.c
src/persistence/: document_io.c
src/render/: render.c
src/ui/: main_window.c  system_dialogs.c
tests/: analysis_playback_smoke.c  analysis_smoke.c  animation_smoke.c  core_smoke.c  core_variants_smoke.c  examples_smoke.c  graph_analysis_advanced_smoke.c  theory_smoke.c  transform_smoke.c
